# EthAI-Guard

./: .bandit.yaml  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  ADMIN_RESPONSIVENESS_IMPROVEMENTS.md  ADMIN_RESPONSIVENESS_SUMMARY.md  ADMIN_RESPONSIVENESS_TESTING_GUIDE.md  ADMIN_UI_RESPONSIVE_QUICK_REF.md  ALL_USERS_LOGIN_TEST_GUIDE.md  ANALYST_LOGIN_DOCUMENTATION_FILES_SUMMARY.md  ANALYST_LOGIN_QUICK_TEST.md  ANALYST_LOGIN_REDIRECT_FIX.md  ANALYST_LOGIN_TESTING_MASTER_CHECKLIST.md  ANALYST_LOGIN_TEST_REPORT.md  ANALYST_LOGIN_UI_DOCUMENTATION_INDEX.md  ANALYST_NAV_COMPLETION_REPORT.md  ANALYST_NAV_DELIVERABLES.md  ANALYST_NAV_DOCUMENTATION_INDEX.md  ANALYST_NAV_QUICK_REFERENCE.md  ANALYST_NAV_SIMPLIFICATION_SUMMARY.md  ANALYST_NAV_VISUAL_SUMMARY.md  ANALYST_UI_ACTUAL_POST_LOGIN.md  ANALYST_UI_BEFORE_AFTER.md  ANALYST_UI_DOCUMENTATION_INDEX.md  ANALYST_UI_FINAL_SUMMARY.md  ANALYST_UI_FIX_IMPLEMENTATION.md  ANALYST_UI_QUICK_REFERENCE.md  ANALYST_UI_SIMPLIFICATION_SUMMARY.md  ANALYST_UI_UX_SPECIFICATION.md  ANALYST_UI_VISUAL_GUIDE.md  COMMIT_MESSAGE_DAY12.md  COMPLETION_REPORT.md  COMPLETION_STATUS.md  CONTAINER_FIX_REPORT.md  CONTRIBUTING.md  DAY11_SECURITY_COMPLETION.md  DAY12_COMPLETION.md  (+54 more)
ai_core/: .flake8  .pylintrc  Dockerfile  __init__.py  main.py  requirements.txt  setup.cfg
ai_core/drift/: __init__.py  alerts.py  algorithms.py  baseline.py  metrics.py  schemas.py  worker.py
ai_core/governance/: compliance_checker.py  model_card_generator.py
ai_core/models/: analysis_model.py
ai_core/utils/: dataset.py  (+9 more)
(+748 files in other folders)
