[metadata]
name = ai_core
version = 0.0.0
description = AI core service package

[options]
packages = find:
include_package_data = True
install_requires =
	# Managed via requirements.txt for development; keep minimal here.

[options.packages.find]
where = .
exclude =
	node_modules
	.venv
	tests
	docs
	logs
	.pytest_cache
	__pycache__
